--- a/KotlinApp/app/src/main/res/layout/activity_main.xml
+++ b/KotlinApp/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Activity.MainActivity">
-
-    <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+    <fragment
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="395dp"
+            android:layout_height="715dp" app:navGraph="@navigation/navigraph" app:defaultNavHost="true"
+            android:id="@+id/fragment" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
