--- a/KotlinApp/app/src/main/res/navigation/navigraph.xml
+++ b/KotlinApp/app/src/main/res/navigation/navigraph.xml
@@ -13,9 +13,13 @@
         <action android:id="@+id/action_startFragment_to_userRegistFragment" app:destination="@id/userRegistFragment"/>
     </fragment>
     <fragment android:id="@+id/userLoginFragment" android:name="test.oz.todoapp.Activity.Fragment.UserLoginFragment"
-              android:label="UserLoginFragment" tools:layout="@layout/fragment_login"/>
+              android:label="UserLoginFragment" tools:layout="@layout/fragment_login">
+        <action android:id="@+id/action_userLoginFragment_to_toDoHomeFragment" app:destination="@id/toDoHomeFragment"/>
+    </fragment>
     <fragment android:id="@+id/userRegistFragment" android:name="test.oz.todoapp.Activity.Fragment.UserRegistFragment"
               android:label="UserRegistFragment">
         <action android:id="@+id/action_userRegistFragment_to_startFragment" app:destination="@id/startFragment"/>
     </fragment>
+    <fragment android:id="@+id/toDoHomeFragment" android:name="test.oz.todoapp.Activity.Fragment.ToDoHomeFragment"
+              android:label="ToDoHomeFragment"/>
 </navigation>
